Add rkt files