@@ -20,21 +20,26 @@ public class Thing {
     }
 
     private Type type;
+
     public Thing(String value, ArrayList<Thing> children) {
         if (children == null) {
             this.children = new ArrayList<Thing>();
         } else {
             this.children = children;
         }
+        this.setValue(value);
+    }
+
+    public void setValue(String value) {
         if (value.equals("true") || value.equals("false")) {
-            this.value = new Boolean(value.toString());
+            this.value = Boolean.valueOf(value);
             this.type = Type.BOOLEAN;
         } else if (value.equals("(void)")) {
             this.value = value;
             this.type = Type.VOID;
         } else {
             try {
-                this.value = new Integer(Integer.parseInt(value.toString()));
+                this.value = Integer.parseInt(value);
                 this.type = Type.INTEGER;
             } catch (NumberFormatException e) {
                 this.value = value;
@@ -42,6 +47,7 @@ public class Thing {
             }
         }
     }
+
     // REQUIRES: none
     // MODIFIES: none
     // EFFECTS: returns a string representation of this
@@ -56,18 +62,21 @@ public class Thing {
             return ret + ")";
         }
     }
+
     // REQUIRES: none
     // MODIFIES: this
     // EFFECTS: adds a child to this
     public void addChild(Thing child) {
         this.children.add(child);
     }
+
     // REQUIRES: none
     // MODIFIES: this
     // EFFECTS: adds children to this
     public void addChildren(ArrayList<Thing> children) {
         this.children.addAll(children);
     }
+
     // REQUIRES: none
     // MODIFIES: none
     // EFFECTS: returns whether this is equal to param thing
@@ -76,7 +85,7 @@ public class Thing {
             return false;
         } else if (this.children.size() == 0 && thing.getChildren().size() == 0) {
             return true;
-        } else if (this.children.size() != thing.getChildren().size()){
+        } else if (this.children.size() != thing.getChildren().size()) {
             return false;
         } else {
             for (int i = 0; i < this.children.size(); i++) {
